--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 }
 
 body{
+    background: #336bff;    
     font-family: 'Poppins', sans-serif;
 }
 .logo{
@@ -15,7 +16,7 @@ body{
     
 }
 .header{
-    background: black;
+    background:  #336bff;
     height: 80px;
     display: flex;
     justify-content: space-between;
@@ -28,11 +29,41 @@ body{
     padding: 50px;
 }
 a{
-    color: salmon;
+    color:  #e0ff33;
 }
 .li-link{
     list-style: none;
 }
 a:hover{
     color: white;
+}
+
+
+.img-boke{
+    width: 700px;
+    cursor: pointer;
+}
+.container-main{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+.section-1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 50px;
+}
+.section-2{
+    margin: 50px;
+}
+
+.section-1 h2{
+    color: #e0ff33;
+}
+
+.section-1 p{
+    color: #e0ff33;
 }
